--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,36 @@
 .container{
-padding:0.01em 16px
+ padding:0.01em 16px
 }
-.progress-container{width:100%;height:1.5em;position:relative;background-color:#f1f1f1}
-.progressbar{background-color:#757575;height:100%;position:relative;line-height:inherit}
+.progress-container{
+ width:100%;
+ height:1.5em; 
+ position:relative;
+ background-color:#f1f1f1
+}
+.progressbar{
+ background-color:green;
+ height:100%;
+ position:relative;
+ line-height:inherit
+}
 
-.center{text-align:center!important}
-.text:hover{color:#fff!important}
+.center{
+ text-align:center!important
+}
+.text{color:#fff!important}
 
 .button{
-border:none;
-display:inline-block;
-outline:0;padding:6px 16px;
-vertical-align:middle;
-overflow:hidden;text-decoration:none!important;
-color:#fff;background-color:#000;
-text-align:center;
-cursor:pointer;
-white-space:nowrap
+ border:none;
+ display:inline-block;
+ outline:0;padding:6px 16px;
+ vertical-align:middle;
+ overflow:hidden;text-decoration:none!important;
+ color:#fff;background-color:#000;
+ text-align:center;
+ cursor:pointer;
+ white-space:nowrap
 }
-.dark-grey:hover{color:#fff!important;background-color:#616161!important}
+.dark-grey{
+ color:#fff!important;
+ background-color:#616161!important
+}
